[package]
name = "fsa-net"
version = "0.1.0"
authors = ["FilippoRanza <filipporanza@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fsa-net-parser = { path = 'fsa-net-parser' }
indexmap = "1.6.2"
structopt = "0.3.21"

[dev-dependencies]
lazy_static = "1.4.0"
test-utils = {path = 'test-utils'}

