[package]
name = "fsa-net-parser"
version = "0.1.0"
authors = ["FilippoRanza <filipporanza@gmail.com>"]
edition = "2018"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lalrpop-util = "0.19"
regex = "1"
item-location-derive = {path = "item-location-derive"}

[build-dependencies]
lalrpop = "0.19"